layout framekwork complete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <p>Player1's turn!</p>
             </div>
             <div class="board">
-                <div class="cell"></div>
+                <div class="cell">
+                    <i class="fa-regular fa-circle fa-2xl"></i>
+                </div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
