--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
                 <p>Player1's turn!</p>
             </div>
             <div class="board">
-                <div class="cell">
-                    <i class="fa-regular fa-circle fa-2xl"></i>
-                </div>
-                <div class="cell"></div>
+                <div class="cell x"></div>
+                <div class="cell o"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
