hover x and o complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="status">
                 <p>Player1's turn!</p>
             </div>
-            <div class="board">
+            <div class="board o" id="board">
                 <div class="cell x"></div>
                 <div class="cell o"></div>
                 <div class="cell"></div>
