start game: setting up who starts first and display a message to show whose turn it is

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             </div>
         </nav>
         <main class="main-content">
-            <div class="status">
-                <p>Player1's turn!</p>
+            <div class="message">
+                
             </div>
-            <div class="board o" id="board">
-                <div class="cell x"></div>
-                <div class="cell o"></div>
+            <div class="board" id="board">
+                <div class="cell"></div>
+                <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
