--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav>
             <h1>TIC-TAC-TOE</h1>
             <div class="buttons">
+                <i class="fa-solid fa-rotate-right fa-2xl"></i>
                 <i class="fa-solid fa-user fa-2xl"></i>
                 <i class="fa-solid fa-music fa-2xl"></i>
                 <i class="fa-solid fa-gear fa-2xl"></i>
@@ -22,7 +23,6 @@
             <div class="message">
                 <h2></h2>
                 <div class="buttons"><i class="fa-solid fa-rotate-right fa-2xl"></i></div>
-                
             </div>
             <div class="board" id="board">
                 <div class="cell"></div>
