--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
                     <i class="fa-solid fa-rotate-right fa-2xl"></i>
                 </div>
                 <i class="fa-solid fa-user fa-2xl"></i>
-                <i class="fa-solid fa-music fa-2xl"></i>
+                <div class="soundToggle">
+                    <i class="fa-solid fa-volume-high fa-2xl"></i>
+                    <i class="fa-solid fa-volume-xmark fa-2xl"></i>
+
+                </div>
                 <i class="fa-solid fa-gear fa-2xl"></i>
+                
             </div>
         </nav>
         <main class="main-content">
