added title div and logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div class="container">
         <nav>
-            <h1>TIC-TAC-TOE</h1>
+            <div class="title">
+                <h1>TIC-TAC-TOE</h1>
+                <i class="fa-solid fa-hashtag fa-2xl"></i>
+            </div>
             <div class="buttons">
                 <div>
                     <i class="fa-solid fa-rotate-right fa-2xl"></i>
