--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
                 <div>
                     <i class="fa-solid fa-rotate-right fa-2xl"></i>
                 </div>
-                <i class="fa-solid fa-user fa-2xl"></i>
+                <div>
+                    <i class="fa-solid fa-user fa-2xl"></i>
+                </div>
                 <div class="soundToggle">
                     <i class="fa-solid fa-volume-high fa-2xl"></i>
                     <i class="fa-solid fa-volume-xmark fa-2xl"></i>
-
                 </div>
-                <i class="fa-solid fa-gear fa-2xl"></i>
-                
+                <div class="themeChange">
+                    <i class="fa-solid fa-palette fa-2xl"></i>
+                </div>
             </div>
         </nav>
         <main class="main-content">
