implemented changing themes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
                     <i class="fa-solid fa-volume-xmark fa-2xl"></i>
                 </div>
                 <div class="themeChange">
-                    <i class="fa-solid fa-palette fa-2xl"></i>
+                    <div class="palette">
+                        <i class="fa-solid fa-palette fa-2xl"></i>
+                    </div>
+                    <div class="themeChoice">
+                        <div class="redTheme">
+                            <i class="fa-solid fa-circle fa-2xl"></i>
+                        </div>
+                        <div class="blueTheme">
+                            <i class="fa-solid fa-circle fa-2xl"></i>
+                        </div>
+                        <div class="beigeTheme">
+                            <i class="fa-solid fa-circle fa-2xl"></i>
+                        </div>
+                        <div class="darkTheme">
+                            <i class="fa-solid fa-moon fa-2xl"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -48,14 +64,23 @@
             </div>
             <div class="scoreBoard">
                 <div class="score player1">
+                    <div>
+                        <i class="fa-solid fa-xmark fa-2xl"></i>
+                    </div>
                     <h2></h2>
                     <h2 id="p1Score"></h2>
                 </div>
                 <div class="score tie">
+                    <div>
+                        <i class="fa-solid fa-handshake-simple fa-2xl"></i>
+                    </div>
                     <h2>Tie</h2>
                     <h2 id="tieScore"></h2>
                 </div>
                 <div class="score player2">
+                    <div>
+                        <i class="fa-regular fa-circle fa-2xl"></i>
+                    </div>
                     <h2></h2>
                     <h2 id="p2Score"></h2>
                 </div>
