--- a/index.html
+++ b/index.html
@@ -86,8 +86,26 @@
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="banner">
+                <div class="icons">
+                    <div>
+                        <i class="fa-brands fa-github fa-2xl"></i>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-linkedin fa-2xl"></i>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-patreon fa-2xl"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-envelope fa-2xl"></i>
+                    </div>
+                </div>
+                <h3>Made by Gerald L.</h3>
+            </div>
+        </footer>
         <div id="overlay">
-
         </div>
     </div>
 
