added simple AI

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 <div>
                     <i class="fa-solid fa-rotate-right fa-2xl"></i>
                 </div>
-                <div>
+                <div class="aiToggle">
                     <i class="fa-solid fa-user fa-2xl"></i>
+                    <i class="fa-solid fa-display fa-2xl"></i>
                 </div>
                 <div class="soundToggle">
                     <i class="fa-solid fa-volume-high fa-2xl"></i>
@@ -74,7 +75,7 @@
                     <div>
                         <i class="fa-solid fa-handshake-simple fa-2xl"></i>
                     </div>
-                    <h2>Tie</h2>
+                    <h2>TIE</h2>
                     <h2 id="tieScore"></h2>
                 </div>
                 <div class="score player2">
