--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
             </div>
-            <div class="scoreBoard">
+            <div class="scoreboard">
                 <div class="score player1">
                     <div>
                         <i class="fa-solid fa-xmark fa-2xl"></i>
