--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <footer>
             <div class="banner">
                 <div class="icons">
-                    <div>
-                        <i class="fa-brands fa-github fa-2xl"></i>
+                    <div class="github">
+                        <a href="https://github.com/genfengl/TicTacToe"><i class="fa-brands fa-github fa-2xl"></i></a>
                     </div>
                     <div>
                         <i class="fa-brands fa-linkedin fa-2xl"></i>
